[package]
name = "RustyXML"
version = "0.1.1"
authors = [ "Florian Zeitz <florob@babelmonkeys.de>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/Florob/RustyXML"
repository = "https://github.com/Florob/RustyXML"
description = "A SAX-like streaming XML parser, and a DOM-like interface based on that"
keywords = [ "XML", "parser" ]
readme = "README.md"

[lib]
name = "xml"

[features]
bench = []
