[package]
name = "RustyXML"
version = "0.2.0"
authors = [ "Florian Zeitz <florob@babelmonkeys.de>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/Florob/RustyXML"
repository = "https://github.com/Florob/RustyXML"
documentation = "https://docs.babelmonkeys.de/RustyXML/xml/"
description = "A SAX-like streaming XML parser, and a DOM-like interface based on that"
keywords = [ "XML", "parser" ]
readme = "README.md"
edition = "2018"

[lib]
name = "xml"

[features]
bench = []
